# go_data_gen

./: .gitignore  CMakeLists.txt  README.md  setup.py  sgf_rules_statistics.py
examples/: CMakeLists.txt  play_sgf.cpp  play_sgf.py
include/go_data_gen/: board.hpp  board_print.hpp  python_env.hpp  rules.hpp  sgf.hpp  types.hpp
python/: CMakeLists.txt  bindings.cpp  setup.py
python/scripts/: sgf_statistics.py
src/: CMakeLists.txt  board.cpp  board_print.cpp  python_env.cpp  sgf.cpp  sources.cmake
